--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -59,6 +59,10 @@ input:checked+div {
   text-decoration: line-through;
 }
 
+.from {
+  display: flex;
+}
+
 .button-wrapper {
   display: flex;
   padding-top: 1rem;
@@ -68,7 +72,7 @@ input:checked+div {
 .form input {
   padding: 1rem;
   height: 2.4rem;
-  width: 20rem;
+  width: 70%;
   border-radius: 10px;
   border: var(--color-border) solid 1px;
   font-size: 1.2rem;
@@ -87,6 +91,7 @@ input:checked+div {
   border-radius: 10px;
   margin-left: 0.6rem;
   font-size: 1.2rem;
+  width: 25%;
 }
 
 .form button:hover {
