--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -72,7 +72,7 @@ input:checked+div {
 .form input {
   padding: 1rem;
   height: 2.4rem;
-  width: 70%;
+  width: min(70%, 20rem);
   border-radius: 10px;
   border: var(--color-border) solid 1px;
   font-size: 1.2rem;
@@ -87,11 +87,10 @@ input:checked+div {
   background: #2f80ed;
   border: none;
   height: 2.4rem;
-  width: 4.4rem;
   border-radius: 10px;
   margin-left: 0.6rem;
   font-size: 1.2rem;
-  width: 25%;
+  width: max(25%, 4.4rem);
 }
 
 .form button:hover {
@@ -169,4 +168,27 @@ nav a.router-link-exact-active:hover {
   display: flex;
   justify-content: center;
   margin-top: 1rem;
+}
+
+/* Animations for changing view */
+.bounce-enter-active {
+  animation: bounce-in 0.5s;
+}
+
+.bounce-leave-active {
+  animation: bounce-in 0.5s reverse;
+}
+
+@keyframes bounce-in {
+  0% {
+    transform: scale(0);
+  }
+
+  50% {
+    transform: scale(1.25);
+  }
+
+  100% {
+    transform: scale(1);
+  }
 }
