layout unbalenced change

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -11,6 +11,11 @@
   grid-template-rows: auto;
 }
 
+main {
+  display: grid;
+  justify-content: center;
+}
+
 .center {
   grid-column: center;
 }
